--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src='index.js'></script>
     <title>Random recipe generator</title>
 </head>
 <body>
 
     <div class="wrapper">
         <div class="image-wrapper">
-            <img src="" alt="">
+            <img id="recipe-image" src="" alt="">
         </div>
         <div class="recipe-wrapper">
-            <h1 class="recipe-title"></h1>
-            <ul class="recipe-ingredients"></ul>
-            <p class="recipe-instructions"></p>
+            <h1 id="recipe-title"></h1>
+            <ul id="ingredients-list"></ul>
+            <p id="recipe-instructions"></p>
         </div>
     </div>
     
